Resolves: tdf#117159 don't crash with chart selected in database report edit

Change-Id: I770008bf0a775c108019c2005b6ec73ee9702a19